--- a/package.json
+++ b/package.json
@@ -1,20 +1,30 @@
 {
-  "name": "website",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.1.4",
-    "react": "18.0.0",
-    "react-dom": "18.0.0"
-  },
-  "devDependencies": {
-    "eslint": "8.13.0",
-    "eslint-config-next": "12.1.4"
-  }
+	"name": "website",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"next": "12.1.4",
+		"react": "18.0.0",
+		"react-dom": "18.0.0",
+		"@apollo/client": "^3.5.10",
+		"@headlessui/react": "^1.5.0",
+		"boxicons": "^2.1.2",
+		"graphql": "^16.3.0",
+		"nodemailer": "^6.7.3",
+		"react-hot-toast": "^2.2.0"
+	},
+	"devDependencies": {
+		"@tailwindcss/forms": "^0.5.0",
+		"autoprefixer": "^10.4.4",
+		"eslint": "8.13.0",
+		"eslint-config-next": "12.1.4",
+		"postcss": "^8.4.12",
+		"tailwindcss": "^3.0.23"
+	}
 }
