fixed responsive layout

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+.yarn
 
 # testing
 /coverage
@@ -30,4 +31,6 @@ yarn-error.log*
 .env
 
 # vercel
+.vercel
+
 .vercel
