--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"next": "12.1.4",
-		"react": "18.0.0",
-		"react-dom": "18.0.0",
 		"@apollo/client": "^3.5.10",
 		"@headlessui/react": "^1.5.0",
 		"boxicons": "^2.1.2",
 		"graphql": "^16.3.0",
+		"next": "12.1.4",
 		"nodemailer": "^6.7.3",
-		"react-hot-toast": "^2.2.0"
+		"react": "18.0.0",
+		"react-dom": "18.0.0",
+		"react-hot-toast": "^2.2.0",
+		"sharp": "^0.30.3"
 	},
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.5.0",
